--- a/src/test/resources/templates/testFlow/pageWithCustomSubmitButton.html
+++ b/src/test/resources/templates/testFlow/pageWithCustomSubmitButton.html
@@ -13,9 +13,9 @@
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__footer">
-              <th:block th:replace="fragments/inputs/submitButton :: submitButton(
+              <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
                 text='Without classes',
-                classes='custom')"/>
+                classes='custom')}"/>
             </div>
           </th:block>
         </th:block>
