--- a/src/test/resources/templates/testFlow/pageWithDefaultSubmitButton.html
+++ b/src/test/resources/templates/testFlow/pageWithDefaultSubmitButton.html
@@ -13,8 +13,8 @@
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__footer">
-              <th:block th:replace="fragments/inputs/submitButton :: submitButton(
-                text='Without classes')"/>
+              <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
+                text='Without classes')}"/>
             </div>
           </th:block>
         </th:block>
