--- a/src/test/resources/templates/testFlow/pageWithOptionalValidation.html
+++ b/src/test/resources/templates/testFlow/pageWithOptionalValidation.html
@@ -13,13 +13,13 @@
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__content">
-              <th:block th:replace="fragments/inputs/number ::
+              <th:block th:replace="~{fragments/inputs/number ::
                   number(inputName='validatePositiveIfNotEmpty',
-                  label='validatePositiveIfNotEmpty')"/>
+                  label='validatePositiveIfNotEmpty')}"/>
             </div>
             <div class="form-card__footer">
-              <th:block th:replace="fragments/inputs/submitButton :: submitButton(
-                text=#{general.inputs.continue})"/>
+              <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
+                text=#{general.inputs.continue})}"/>
             </div>
           </th:block>
         </th:block>
