--- a/src/test/resources/templates/testFlow/testAddressValidationFound.html
+++ b/src/test/resources/templates/testFlow/testAddressValidationFound.html
@@ -10,11 +10,11 @@
         <th:block
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{:: pickAddress})}">
           <th:block th:ref="pickAddress">
-            <th:block th:replace="fragments/screens/addressSuggestionFound ::
+            <th:block th:replace="~{fragments/screens/addressSuggestionFound ::
                   addressSuggestionFound(
                     addressInputToCheck='validationOn',
                     inputName='someAddress'
-                    )"/>
+                    )}"/>
           </th:block>
         </th:block>
       </main>
