--- a/src/test/resources/templates/testFlow/testAddressValidationNotFound.html
+++ b/src/test/resources/templates/testFlow/testAddressValidationNotFound.html
@@ -9,11 +9,11 @@
         <th:block
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{:: verifyAddress})}">
           <th:block th:ref="verifyAddress">
-            <th:block th:replace="fragments/screens/addressSuggestionNotFound ::
+            <th:block th:replace="~{fragments/screens/addressSuggestionNotFound ::
                   addressSuggestionNotFound(
                     addressInputToCheck='validationOn',
                     inputName='useValidatedValidationOn'
-                  )"/>
+                  )}"/>
           </th:block>
         </th:block>
       </main>
