--- a/src/test/resources/templates/uploadFlow/docUploadUnit.html
+++ b/src/test/resources/templates/uploadFlow/docUploadUnit.html
@@ -24,8 +24,8 @@
                   th:replace="~{fragments/fileUploader :: fileUploader(inputName=${dzFormName})}"></th:block>
             </div>
             <div id="submit" class="form-card__footer display-none">
-              <th:block th:replace="fragments/inputs/submitButton :: submitButton(
-                text=#{general.inputs.continue})"/>
+              <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
+                text=#{general.inputs.continue})}"/>
             </div>
           </th:block>
         </th:block>
