--- a/src/test/resources/templates/testFlow/inputs.html
+++ b/src/test/resources/templates/testFlow/inputs.html
@@ -14,23 +14,23 @@
           <th:block th:ref="formContent">
             <div class="form-card__content">
               <th:block
-                  th:replace="fragments/inputs/text ::
+                  th:replace="~{fragments/inputs/text ::
                             text(inputName='textInput',
-                            label='textInput')"/>
-              <th:block th:replace="fragments/inputs/textArea ::
+                            label='textInput')}"/>
+              <th:block th:replace="~{fragments/inputs/textArea ::
                           textArea(inputName='areaInput',
-                          label='areaInput')"/>
-              <th:block th:replace="fragments/inputs/date ::
+                          label='areaInput')}"/>
+              <th:block th:replace="~{fragments/inputs/date ::
                           date(inputName='date',
                           label='dateInput',
-                          groupName='dateFull')"/>
-              <th:block th:replace="fragments/inputs/number ::
+                          groupName='dateFull')}"/>
+              <th:block th:replace="~{fragments/inputs/number ::
                           number(inputName='numberInput',
-                          label='numberInput')"/>
-              <th:block th:replace="fragments/inputs/checkboxFieldset ::
+                          label='numberInput')}"/>
+              <th:block th:replace="~{fragments/inputs/checkboxFieldset ::
                           checkboxFieldset(inputName='checkboxSet',
                           label='checkboxSet',
-                          content=~{::checkboxContent})">
+                          content=~{::checkboxContent})}">
                 <th:block th:ref="checkboxContent">
                   <th:block
                       th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='checkboxSet', value='Checkbox-A', label='Checkbox A')}"/>
@@ -40,10 +40,10 @@
               </th:block>
               <th:block
                   th:replace="~{fragments/inputs/checkbox :: checkbox(inputName='checkboxInput', value='checkbox-value', label='Single checkbox')}"/>
-              <th:block th:replace="fragments/inputs/radioFieldset ::
+              <th:block th:replace="~{fragments/inputs/radioFieldset ::
                           radioFieldset(inputName='radioInput',
                           label='radioInput',
-                          content=~{::radioContent})">
+                          content=~{::radioContent})}">
                 <th:block th:ref="radioContent">
                   <th:block
                       th:replace="~{fragments/inputs/radio :: radio(inputName='radioInput',value='Radio A', label='Radio A')}"/>
@@ -54,10 +54,10 @@
                 </th:block>
               </th:block>
               <th:block
-                  th:replace="fragments/inputs/select ::
+                  th:replace="~{fragments/inputs/select ::
                           select(inputName='selectInput',
                                  label='selectInput',
-                                 content=~{::selectContent})">
+                                 content=~{::selectContent})}">
                 <th:block th:ref="selectContent">
                   <th:block
                       th:replace="~{fragments/inputs/selectOption :: selectOption(value='', optionText='Choose one')}"/>
@@ -70,21 +70,21 @@
                 </th:block>
               </th:block>
               <th:block
-                  th:replace="fragments/inputs/money :: money(
+                  th:replace="~{fragments/inputs/money :: money(
                             inputName='moneyInput',
-                            label='moneyInput')"/>
+                            label='moneyInput')}"/>
               <th:block
-                  th:replace="fragments/inputs/phone :: phone(
+                  th:replace="~{fragments/inputs/phone :: phone(
                             inputName='phoneInput',
-                            label='phoneInput')"/>
+                            label='phoneInput')}"/>
               <th:block
-                  th:replace="fragments/inputs/ssn :: ssn(
+                  th:replace="~{fragments/inputs/ssn :: ssn(
                             inputName='ssnInput',
-                            label='ssnInput')"/>
-              <th:block th:replace="fragments/inputs/state ::
+                            label='ssnInput')}"/>
+              <th:block th:replace="~{fragments/inputs/state ::
                           state(inputName='stateInput',
                           label='stateInput',
-                          placeholderText='State')"/>
+                          placeholderText='State')}"/>
             </div>
             <div class="form-card__footer">
               <th:block th:replace="~{fragments/continueButton :: continue}"/>
