--- a/src/test/resources/templates/testFlow/other.html
+++ b/src/test/resources/templates/testFlow/other.html
@@ -13,9 +13,9 @@
             th:replace="~{fragments/form :: form(action='/flow/testFlow/other', content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__content">
-              <th:block th:replace="fragments/inputs/text ::
+              <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName='otherInput',
-                  label='Other input')"/>
+                  label='Other input')}"/>
             </div>
             <div class="form-card__footer">
               <th:block th:replace="~{fragments/continueButton :: continue}"/>
