--- a/src/test/resources/templates/testFlow/testAddressVerification.html
+++ b/src/test/resources/templates/testFlow/testAddressVerification.html
@@ -9,12 +9,12 @@
         <th:block
             th:replace="~{fragments/form :: form(action=${formAction}, content=~{:: verifyAddress})}">
           <th:block th:ref="verifyAddress">
-            <th:block th:replace="fragments/screens/addressSelectionScreen ::
+            <th:block th:replace="~{fragments/screens/addressSelectionScreen ::
                   addressSelectionScreen(
                     addressInputToCheck='validationOn',
                     inputName='useValidatedValidationOn',
                     editAddressURL=${'/flow/testFlow/testAddressValidation'}
-                  )"/>
+                  )}"/>
           </th:block>
         </th:block>
       </main>
