--- a/src/test/resources/templates/testFlow/next.html
+++ b/src/test/resources/templates/testFlow/next.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='Next Page')"></head>
+<head th:replace="~{fragments/head :: head(title='Next Page')}"></head>
 <body>
 <div class="page-wrapper">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='Next Page', subtext='This is the next page!')"/>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='Next Page', subtext='This is the next page!')}"/>
         <th:block
-            th:replace="'fragments/form' :: form(action='/flow/testFlow/next', content=~{::formContent})">
+            th:replace="~{fragments/form :: form(action='/flow/testFlow/next', content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__content">
-              <th:block th:replace="'fragments/inputs/text' ::
+              <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName='textInput',
-                  label='Other input')"/>
+                  label='Other input')}"/>
             </div>
             <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue"/>
+              <th:block th:replace="~{fragments/continueButton :: continue}"/>
             </div>
           </th:block>
         </th:block>
@@ -26,6 +26,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer"/>
+<th:block th:replace="~{fragments/footer :: footer}"/>
 </body>
 </html>
