--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -11,26 +11,26 @@
     zipCode=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
     validateAddressInputName=${T(formflow.library.inputs.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
 >
-  <th:block th:replace="'fragments/inputs/text' ::
+  <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${streetAddress},
                   label=#{address.street-address-1},
-                  helpText=${streetAddressHelpText})"/>
-  <th:block th:replace="'fragments/inputs/text' ::
+                  helpText=${streetAddressHelpText})}"/>
+  <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${streetAddress2},
                   label=#{address.street-address-2},
-                  helpText=${streetAddress2HelpText})"/>
-  <th:block th:replace="'fragments/inputs/text' ::
+                  helpText=${streetAddress2HelpText})}"/>
+  <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${city},
                   label=#{address.city},
-                  helpText=${cityHelpText})"/>
-  <th:block th:replace="'fragments/inputs/state' ::
+                  helpText=${cityHelpText})}"/>
+  <th:block th:replace="~{fragments/inputs/state ::
                   state(inputName=${state},
                   label=#{address.state},
-                  helpText=${stateHelpText})"/>
-  <th:block th:replace="'fragments/inputs/text' ::
+                  helpText=${stateHelpText})}"/>
+  <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${zipCode},
                   label=#{address.zip},
-                  helpText=${zipCodeHelpText})"/>
+                  helpText=${zipCodeHelpText})}"/>
   <input type="hidden"
          th:name="${validateAddressInputName}"
          th:value="${validate}"/>
