--- a/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
+++ b/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
@@ -12,27 +12,27 @@
       ${inputContent != null}">
   <!DOCTYPE html>
   <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
-  <head th:replace="fragments/head :: head(title=${title})"></head>
+  <head th:replace="~{fragments/head :: head(title=${title})}"></head>
   <body>
   <div class="page-wrapper">
-    <div th:replace="fragments/toolbar :: toolbar"></div>
+    <div th:replace="~{fragments/toolbar :: toolbar}"></div>
     <section class="slab">
       <div class="grid">
-        <div th:replace="fragments/goBack :: goBackLink"></div>
+        <div th:replace="~{fragments/goBack :: goBackLink}"></div>
         <main id="content" role="main" class="form-card spacing-above-35">
-          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _" />
+          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _"/>
           <th:block
-              th:replace="'fragments/cardHeader' :: cardHeader(header=${header})"/>
+              th:replace="~{fragments/cardHeader :: cardHeader(header=${header})}"/>
           <th:block
-              th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
+              th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
             <th:block th:ref="formContent">
               <div class="form-card__content">
                 <th:block th:replace="${inputContent}"/>
               </div>
               <div class="form-card__footer">
-                <th:block th:replace="fragments/inputs/yesOrNo :: yesOrNo(
+                <th:block th:replace="~{fragments/inputs/yesOrNo :: yesOrNo(
                  inputName=${inputName},
-                 ariaDescribe='header')"/>
+                 ariaDescribe='header')}"/>
               </div>
             </th:block>
           </th:block>
@@ -40,7 +40,7 @@
       </div>
     </section>
   </div>
-  <th:block th:replace="fragments/footer :: footer"/>
+  <th:block th:replace="~{fragments/footer :: footer}"/>
   </body>
   </html>
 </th:block>
