--- a/src/test/resources/templates/testFlow/pageWithCheckboxSetInput.html
+++ b/src/test/resources/templates/testFlow/pageWithCheckboxSetInput.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='Checkbox input page')"></head>
+<head th:replace="~{fragments/head :: head(title='Checkbox input page')}"></head>
 <body>
 <div class="page-wrapper">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='Checkbox input page')"/>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='Checkbox input page')}"/>
         <th:block
-            th:replace="'fragments/form' :: form(action='/flow/testFlow/pageWithCheckboxSetInput', content=~{::formContent})">
+            th:replace="~{fragments/form :: form(action='/flow/testFlow/pageWithCheckboxSetInput', content=~{::formContent})}">
           <th:block th:ref="formContent">
-            <th:block th:replace="'fragments/inputs/checkboxFieldset' ::
+            <th:block th:replace="~{fragments/inputs/checkboxFieldset ::
                 checkboxFieldset(inputName='favoriteFruitCheckbox',
                 label='favoriteFruit',
                 fieldsetHelpText='favoriteFruitGoesHere',
-                content=~{::favoriteFruit})">
+                content=~{::favoriteFruit})}">
               <th:block th:ref="favoriteFruit">
                 <!-- Copy the below input if you want to add more -->
                 <th:block
-                    th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Apple', label='Apple')"/>
+                    th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Apple', label='Apple')}"/>
                 <th:block
-                    th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Orange', label='Orange')"/>
+                    th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Orange', label='Orange')}"/>
                 <th:block
-                    th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Banana', label='Banana')"/>
+                    th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='favoriteFruitCheckbox',value='Banana', label='Banana')}"/>
               </th:block>
             </th:block>
             <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue"/>
+              <th:block th:replace="~{fragments/continueButton :: continue}"/>
             </div>
           </th:block>
         </th:block>
@@ -36,6 +36,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer"/>
+<th:block th:replace="~{fragments/footer :: footer}"/>
 </body>
 </html>
