Rough outline of how to get the back to work.

--- a/src/main/resources/templates/fragments/inputs/checkboxInSet.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxInSet.html
@@ -4,10 +4,11 @@
 <th:block
     th:fragment="checkboxInSet"
     th:with="
+      data=${T(formflow.library.utils.InputUtils).getData(model)},
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
       name=${inputName} + '[]',
-      checked=${T(formflow.library.utils.InputUtils).arrayOrStringContains(inputData.getOrDefault(name, ''), value)},
+      checked=${T(formflow.library.utils.InputUtils).arrayOrStringContains(data.getOrDefault(name, ''), value)},
       id=${#bools.isTrue(noneOfTheAbove) ? 'none__checkbox' : inputName + '-' + value}"
     th:assert="
       ${!#strings.isEmpty(inputName)},
