--- a/src/main/resources/templates/fragments/inputs/checkboxInSet.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxInSet.html
@@ -2,40 +2,40 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-    th:fragment="checkboxInSet"
-    th:with="
-      data=${T(formflow.library.utils.InputUtils).getData(model)},
+        th:fragment="checkboxInSet"
+        th:with="
+      data=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)},
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
       name=${inputName} + '[]',
       checked=${T(formflow.library.utils.InputUtils).arrayOrStringContains(data.getOrDefault(name, ''), value)},
       id=${#bools.isTrue(noneOfTheAbove) ? 'none__checkbox' : inputName + '-' + value}"
-    th:assert="
+        th:assert="
       ${!#strings.isEmpty(inputName)},
       ${!#strings.isEmpty(value)},
       ${!#strings.isEmpty(label)}">
-  <label th:for="${id}"
-         th:id="${id} + '-label'"
-         class="checkbox display-flex">
-    <input type="checkbox"
-           th:id="${id}"
-           th:value="${value}"
-           th:name="${name}"
-           th:checked="${checked}"
-           th:attr="
+    <label th:for="${id}"
+           th:id="${id} + '-label'"
+           class="checkbox display-flex">
+        <input type="checkbox"
+               th:id="${id}"
+               th:value="${value}"
+               th:name="${name}"
+               th:checked="${checked}"
+               th:attr="
             aria-invalid=${hasError},
             data-follow-up=${followUpId}">
-    <div th:if="${hasIcon}">
-      <i th:class="${'icon-' + checkboxIcon}" style="margin-right: 0.5rem"></i>
-    </div>
-    <div>
-      <span th:text="${label}"></span>
-      <p th:if="${hasHelpText}"
-         th:id="${id} + '-help-text'"
-         th:text="${checkboxHelpText}"
-         class="text--help with-no-padding"></p>
-    </div>
-  </label>
+        <div th:if="${hasIcon}">
+            <i th:class="${'icon-' + checkboxIcon}" style="margin-right: 0.5rem"></i>
+        </div>
+        <div>
+            <span th:text="${label}"></span>
+            <p th:if="${hasHelpText}"
+               th:id="${id} + '-help-text'"
+               th:text="${checkboxHelpText}"
+               class="text--help with-no-padding"></p>
+        </div>
+    </label>
 </th:block>
 </body>
 </html>
