Re factos the screen controller a little.
Tries out using the thymeleaf ${#vars} variable in some code

Co-Authored-By: Alex Gonzalez; agonzalez@codeforamerica.org

--- a/src/main/resources/templates/fragments/inputs/selectOption.html
+++ b/src/main/resources/templates/fragments/inputs/selectOption.html
@@ -2,15 +2,15 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-        th:fragment="selectOption"
-        th:with="fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)}"
-        th:assert="
+    th:fragment="selectOption"
+    th:with="fieldData=${T(formflow.library.utils.InputUtils).getFieldData(#vars)}"
+    th:assert="
       ${value != null},
       ${!#strings.isEmpty(optionText)}">
-    <option
-            th:value="${value}"
-            th:selected="${fieldData.getOrDefault(inputName, '').equals(value)}"
-            th:text="${optionText}"></option>
+  <option
+      th:value="${value}"
+      th:selected="${fieldData.getOrDefault(inputName, '').equals(value)}"
+      th:text="${optionText}"></option>
 </th:block>
 </body>
 </html>
