--- a/src/main/resources/templates/fragments/inputs/checkbox.html
+++ b/src/main/resources/templates/fragments/inputs/checkbox.html
@@ -2,9 +2,9 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-        th:fragment="checkbox"
-        th:with="
-      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)},
+    th:fragment="checkbox"
+    th:with="
+      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(#vars)},
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
       name=${inputName} + '[]',
@@ -12,7 +12,7 @@
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
-        th:assert="
+    th:assert="
       ${!#strings.isEmpty(inputName)},
       ${!#strings.isEmpty(value)},
       ${!#strings.isEmpty(label)}">
@@ -42,7 +42,7 @@
             </div>
         </label>
         <th:block
-                th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
+            th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     </div>
 </th:block>
 </body>
