--- a/src/main/resources/templates/fragments/inputs/number.html
+++ b/src/main/resources/templates/fragments/inputs/number.html
@@ -2,9 +2,9 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-        th:fragment="number"
-        th:with="
-      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)},
+    th:fragment="number"
+    th:with="
+      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(#vars)},
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasTitle=${!#strings.isEmpty(title)},
       hasPattern=${!#strings.isEmpty(pattern)},
@@ -14,7 +14,7 @@
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
-        th:assert="${!#strings.isEmpty(inputName)},, ${hasLabel || hasAriaLabel}">
+    th:assert="${!#strings.isEmpty(inputName)},, ${hasLabel || hasAriaLabel}">
     <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
         <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
         <p class="text--help"
@@ -34,7 +34,7 @@
             aria-invalid=${hasError}"
                th:value="${fieldData.getOrDefault(inputName, '')}">
         <th:block
-                th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
+            th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     </div>
 </th:block>
 </body>
