--- a/src/main/resources/templates/fragments/inputs/phone.html
+++ b/src/main/resources/templates/fragments/inputs/phone.html
@@ -2,9 +2,9 @@
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block
-        th:fragment="phone"
-        th:with="
-      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(currentSubflowItem, inputData)},
+    th:fragment="phone"
+    th:with="
+      fieldData=${T(formflow.library.utils.InputUtils).getFieldData(#vars)},
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
@@ -12,25 +12,25 @@
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
-        th:assert="${!#strings.isEmpty(inputName)}, ${hasLabel || hasAriaLabel}">
-    <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
-        <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
-        <p class="text--help"
-           th:if="${hasHelpText}"
-           th:id="${inputName + '-help-text'}"
-           th:text="${helpText}"></p>
-        <input type="tel" class="text-input form-width--med phone-input"
-               th:id="${inputName}"
-               th:name="${inputName}"
-               th:placeholder="${placeholder}"
-               th:attr="
+    th:assert="${!#strings.isEmpty(inputName)}, ${hasLabel || hasAriaLabel}">
+  <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
+    <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
+    <p class="text--help"
+       th:if="${hasHelpText}"
+       th:id="${inputName + '-help-text'}"
+       th:text="${helpText}"></p>
+    <input type="tel" class="text-input form-width--med phone-input"
+           th:id="${inputName}"
+           th:name="${inputName}"
+           th:placeholder="${placeholder}"
+           th:attr="
             aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
             aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
             aria-invalid=${hasError}"
-               th:value="${fieldData.getOrDefault(inputName, '')}">
-        <th:block
-                th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
-    </div>
+           th:value="${fieldData.getOrDefault(inputName, '')}">
+    <th:block
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
+  </div>
 </th:block>
 </body>
 </html>
