Add custom error page with stacktrace
- Add new config properties to allow you to turn it off/on per
  environment or choose which properties are highlighted in the trace
- Additional testing methods for getting text from the body of a page
  and navigating to new pages

[#185195335]

Co-authored-by: Cypress Borg <cborg@codeforamerica.org>

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -629,3 +629,16 @@ body,
 .address-validation .radio-button div {
   font-weight: normal;
 }
+
+.stack-trace {
+  color: white;
+  background-color: #232323;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 10px;
+  font-family: Consolas, Monaco, monospace;
+  font-size: 13px;
+  line-height: 1.4;
+  overflow-x: auto;
+  white-space: pre;
+}
