--- a/src/main/resources/templates/errors/devError.html
+++ b/src/main/resources/templates/errors/devError.html
@@ -38,8 +38,9 @@
     </tr>
     </tbody>
   </table>
-  <th:block th:if="${!prettyStackTrace.isEmpty()}">
-    <h3 class="text--centered spacing-below-0 space-above-0" style="background-color: red; color: white">Stacktrace</h3>
+  <th:block th:if="${prettyStackTrace != null && !prettyStackTrace.isEmpty()}">
+    <h3 class="text--centered spacing-below-0 space-above-0"
+        style="background-color: red; color: white">Stacktrace</h3>
     <div class="stack-trace" th:utext="${prettyStackTrace}"></div>
   </th:block>
 </main>
