--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -15,6 +15,8 @@
       </div>
       <div class="toolbar__right">
         <!--        <select th:replace="~{fragments/localeSelect :: localeSelect}"></select>-->
+        <th:block th:replace="~{fragments/localeSelect :: localeSelect}"></th:block>
+        <th:block th:replace="~{fragments/localeSelect :: translate_noscript}"></th:block>
       </div>
     </div>
     <th:block
