--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -16,5 +16,6 @@
   <link rel="preload" href="/webjars/form-flow/0.0.1/js/honeycrisp.min.js" as="script">
   <script src="/webjars/form-flow/0.0.1/js/honeycrisp.min.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDropZone.js"></script>
+  <th:block th:replace="~{fragments/localeSelect :: translate_button_js}"></th:block>
 </th:block>
 </html>
