--- a/src/test/resources/templates/testFlow/testSubflowAddressValidationNotFound.html
+++ b/src/test/resources/templates/testFlow/testSubflowAddressValidationNotFound.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="~{fragments/head :: head(title='testAddressValidationNotFound')}"></head>
+<head
+    th:replace="~{fragments/head :: head(title='testAddressValidationNotFound (subflow)')}"></head>
 <body>
 <div class="page-wrapper">
   <section class="slab">
