Add icon for phone nudge story
#185493881

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -2044,6 +2044,57 @@
         </svg>
       </td>
     </tr>
+    <tr>
+      <td>documentsSearch</td>
+      <td>
+        <svg th:fragment="documentsSearch" width="101" height="75" viewBox="0 0 101 75" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <g id="Form Card Graphic">
+            <path id="Vector" fill-rule="evenodd" clip-rule="evenodd"
+                  d="M49.3641 69.286C39.3847 68.3619 28.4231 68.872 21.9478 61.2114C15.308 53.3563 15.7571 42.1893 17.9634 32.1376C20.1976 21.9587 24.9296 12.4152 33.8401 7.03147C43.9177 0.942532 56.5019 -2.69467 67.0883 2.45622C77.6451 7.59275 80.969 20.0406 83.9453 31.4106C87.1016 43.4685 92.3711 57.7555 83.9719 66.9549C75.7633 75.9454 61.4768 70.4076 49.3641 69.286Z"
+                  fill="#9BCBEB"/>
+            <g id="Group">
+              <g id="Group_2">
+                <g id="Vector_2">
+                  <path
+                      d="M65.7854 9.19509L30.7462 9.1665C27.8885 9.1665 25.5711 11.4887 25.5711 14.3611L25.5 64.2347C25.4929 67.1071 27.8103 69.4436 30.668 69.4436L69.1337 69.4721C71.9914 69.4721 74.3089 67.1499 74.3089 64.2776L74.3799 17.9694L65.7854 9.19509Z"
+                      fill="white"/>
+                  <path d="M65.7854 17.9703L65.7854 9.19509L74.3089 17.9703H65.7854Z" fill="white"/>
+                  <path
+                      d="M65.7854 9.19509L30.7462 9.1665C27.8885 9.1665 25.5711 11.4887 25.5711 14.3611L25.5 64.2347C25.4929 67.1071 27.8103 69.4436 30.668 69.4436L69.1337 69.4721C71.9914 69.4721 74.3089 67.1499 74.3089 64.2776L74.3799 17.9694L65.7854 9.19509ZM65.7854 9.19509L65.7854 17.9703H74.3089L65.7854 9.19509Z"
+                      stroke="#121111" stroke-width="3" stroke-miterlimit="10"
+                      stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <path id="Vector_3" d="M36.5 35L65.5 35" stroke="#121111" stroke-width="3"
+                      stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                <path id="Vector_4" d="M36.5 45L65.5 45" stroke="#121111" stroke-width="3"
+                      stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                <path id="Vector_5" d="M36.5 25L65.5 25" stroke="#121111" stroke-width="3"
+                      stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+            </g>
+            <rect id="Rectangle 197" x="78.751" y="48.3169" width="16.0444" height="4"
+                  transform="rotate(27.8741 78.751 48.3169)" fill="white"/>
+            <g id="Group 238">
+              <line id="Line 128" x1="71.3396" y1="42.6535" x2="92.2122" y2="54.4997"
+                    stroke="#121111" stroke-width="3"/>
+              <path id="Vector 9"
+                    d="M88.381 59.2244L89.2507 59.718C89.2507 59.718 91.4249 60.9519 92.9057 58.3429C94.3865 55.7338 92.2122 54.4998 92.2122 54.4998L91.3426 54.0062"
+                    stroke="#121111" stroke-width="3"/>
+              <line id="Line 127" x1="68.3781" y1="47.8717" x2="89.2507" y2="59.718"
+                    stroke="#121111" stroke-width="3"/>
+            </g>
+            <g id="Group 237">
+              <circle id="Ellipse 8" cx="67.5" cy="43" r="11.5" fill="white" stroke="#121111"
+                      stroke-width="3"/>
+            </g>
+            <path id="Vector_6"
+                  d="M62.2725 36.2874C60.1285 38.0346 58.9225 40.4538 58.5205 43.1418C58.3865 43.8138 58.9225 44.4858 59.7265 44.6202C60.5305 44.6202 61.0665 44.0826 61.2005 43.4106C61.4685 41.3946 62.4065 39.6474 63.8805 38.3034C64.4165 37.9002 64.5505 36.9594 64.0145 36.4218C63.7465 35.8842 62.9425 35.8842 62.2725 36.2874Z"
+                  fill="#121111"/>
+          </g>
+        </svg>
+      </td>
+    </tr>
     </tbody>
   </table>
 </article>
