--- a/src/main/resources/templates/fragments/localeSelect.html
+++ b/src/main/resources/templates/fragments/localeSelect.html
@@ -11,8 +11,7 @@
           class="button"
           aria-haspopup="true"
           aria-controls="menu2">
-    <!--  TODO: Add icon  -->
-    <!--    <th:block th:replace="~{fragments/icons :: translation}"></th:block>-->
+    <i class="icon icon-translate"></i>
     <span>
       <strong th:text="#{language-preferences.button}"></strong>
         <span th:if="${lang.equals('en')}" class="small-text" aria-hidden="true"
