--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -279,6 +279,10 @@ url('/webjars/form-flow/0.0.1/fonts/MaterialIcons-Regular.svg') format('svg');
   font-size: 1.6rem;
 }
 
+.toolbar {
+  align-items: center;
+}
+
 .list--checkmark li:before {
   background-image: url('/webjars/form-flow/0.0.1/images/emojis/checkmark.png');
 }
@@ -651,6 +655,7 @@ body,
   margin-bottom: 0;
   margin-right: 0;
   display: flex;
+  align-items: center;
   position: relative;
   background-color: white;
   border: none;
@@ -666,6 +671,18 @@ body,
   flex-direction: column;
   align-items: flex-start;
   line-height: 1.3;
+}
+
+.menu-button-links .icon {
+  font-size: 2.4rem;
+  margin-right: 0.8rem;
+  display: none;
+}
+
+@media screen and (min-width: 401px) {
+  .menu-button-links .icon {
+    display: inline;
+  }
 }
 
 .menu-button-links button strong {
@@ -695,18 +712,11 @@ body,
   padding: 10px 15px;
   display: block;
   border: none;
-  color: teal;
+  color: #003865;
   font-size: 15px;
 }
 
 .menu-button-links button svg {
   margin-right: 12px;
   align-self: center;
-}
-
-/* focus styling */
-.menu-button-links button:focus,
-.menu-button-links [role="menuitem"]:focus,
-.menu-button-links button:hover {
-  color: #121111;
 }
